localization_workspace/log/build_2026-01-28_20-23-38/wr_fusion/stderr.log
  File "/home/wiscrobo/workspace/WRoverSoftware_25-26/localization_workspace/install/wr_fusion/lib/python3.10/site-packages/wr_fusion/fusion.py", line 278
    		)
    		^
SyntaxError: unmatched ')'

